--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>-->
 <html lang="en">
 <head>
 	<meta charset="utf-8"/>
@@ -9,7 +9,7 @@
 		name="description"
 		content="Web site created using create-react-app"
 	/>
-	<title>React App</title>
+	<title>Todo List</title>
 </head>
 <body>
 <div id="root"></div>
